# steamgame_crawling

./: .gitignore  README.md  filter_popular_games.py  pyproject.toml  requirements.txt  run_game_filter.py  test_game_ids.txt
src/: crawler.py  crawler_to_db.py  example_api_to_db.py  fetch_steam_game_data.py  fetch_steam_game_ids.py  html_analyzer.py  image_extractor.py  run_crawler_to_db.py  run_save_all_games.py  single_game_crawler.py  single_game_crawler_minimal.py  single_game_tag_crawler.py  test_random_games_to_db.py  update_game_tags.py
src/_tag/: connect_db.py  find_missing_tags.py
src/database/: __init__.py  connection.py  inserter.py  models.py  queries.py  schema.sql
src/utils/: __init__.py  logger.py
