[project]
name = "steamgame-crawling"
version = "0.1.0"
description = "Steam game tag crawler"
authors = [
    {name = "nohvenell2",email = "nohvenell2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
